# ChangeLog for dev-lang/nqp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/nqp/ChangeLog,v 1.41 2014/02/26 08:38:54 patrick Exp $

  26 Feb 2014; Patrick Lauer <patrick@gentoo.org> -nqp-2013.08.ebuild,
  -nqp-2013.09.ebuild, -nqp-2013.11-r1.ebuild, -nqp-2013.11.ebuild,
  -nqp-2013.12.1-r1.ebuild, -nqp-2013.12.1.ebuild:
  Cleanup old

*nqp-2014.02 (26 Feb 2014)

  26 Feb 2014; Patrick Lauer <patrick@gentoo.org> +nqp-2014.02.ebuild:
  Bump

*nqp-2014.01-r1 (18 Feb 2014)

  18 Feb 2014; Patrick Lauer <patrick@gentoo.org> +nqp-2014.01-r1.ebuild:
  Enable moarvm backend. Still experimental, but passes tests and looks neat

*nqp-2014.01 (11 Feb 2014)

  11 Feb 2014; Patrick Lauer <patrick@gentoo.org> +nqp-2014.01.ebuild:
  Bump

*nqp-2013.12.1-r1 (09 Jan 2014)

  09 Jan 2014; Patrick Lauer <patrick@gentoo.org> +nqp-2013.12.1-r1.ebuild,
  metadata.xml:
  Add not-yet-working support for MoarVM backend

*nqp-2013.12.1 (09 Jan 2014)

  09 Jan 2014; Patrick Lauer <patrick@gentoo.org> +nqp-2013.12.1.ebuild:
  Bump

  11 Dec 2013; Patrick Lauer <patrick@gentoo.org> nqp-2013.11-r1.ebuild:
  Fix build for USE=doc

*nqp-2013.11-r1 (06 Dec 2013)

  06 Dec 2013; Patrick Lauer <patrick@gentoo.org> +nqp-2013.11-r1.ebuild,
  metadata.xml:
  Add nqp-j support, moarvm will follow when it's working well enough

*nqp-2013.11 (01 Dec 2013)

  01 Dec 2013; Patrick Lauer <patrick@gentoo.org> +nqp-2013.11.ebuild:
  Bump

  24 Sep 2013; Patrick Lauer <patrick@gentoo.org> -nqp-2013.05.ebuild,
  -nqp-2013.06.ebuild, -nqp-2013.07.ebuild:
  Remove old

*nqp-2013.09 (24 Sep 2013)

  24 Sep 2013; Patrick Lauer <patrick@gentoo.org> +nqp-2013.09.ebuild:
  Bump

*nqp-2013.08 (03 Sep 2013)

  03 Sep 2013; Patrick Lauer <patrick@gentoo.org> +nqp-2013.08.ebuild:
  Bump

  01 Aug 2013; Patrick Lauer <patrick@gentoo.org> -nqp-2013.01.ebuild,
  -nqp-2013.02.1.ebuild, -nqp-2013.02.ebuild, -nqp-2013.03.ebuild,
  -nqp-2013.04.ebuild: