@@ -1,14 +1,14 @@
 DEFINED_PHASES=compile configure install test
-DEPEND=parrot? ( >=dev-lang/parrot-5.9.0:=[unicode] ) java? ( virtual/jre ) moar? ( =dev-lang/moarvm-2014.02 ) java? ( virtual/jdk ) dev-lang/perl
+DEPEND=parrot? ( >=dev-lang/parrot-5.9.0:=[unicode] ) java? ( >=virtual/jre-1.7 ) moar? ( =dev-lang/moarvm-2014.02 ) java? ( >=virtual/jdk-1.7 ) dev-lang/perl
 DESCRIPTION=Not Quite Perl, a Perl 6 bootstrapping compiler
 EAPI=5
 HOMEPAGE=http://rakudo.org/
 IUSE=doc +parrot java moar
 KEYWORDS=~x86 ~amd64
 LICENSE=Artistic-2
-RDEPEND=parrot? ( >=dev-lang/parrot-5.9.0:=[unicode] ) java? ( virtual/jre ) moar? ( =dev-lang/moarvm-2014.02 )
+RDEPEND=parrot? ( >=dev-lang/parrot-5.9.0:=[unicode] ) java? ( >=virtual/jre-1.7 ) moar? ( =dev-lang/moarvm-2014.02 )
 REQUIRED_USE=|| ( parrot java moar )
 SLOT=0
 SRC_URI=http://github.com/perl6/nqp/tarball/2014.02 -> nqp-2014.02.tar.gz
 _eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=e6c79ee34dab24269479d80f526b4614
+_md5_=5ef3f846296466af1e903290af372160
