@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install postinst postrm prepare test
+DEPEND=berkdb? ( sys-libs/db ) gdbm? ( sys-libs/gdbm ) ssl? ( dev-libs/openssl ) socks5? ( >=net-proxy/dante-1.1.13 ) ncurses? ( sys-libs/ncurses ) readline? ( sys-libs/readline ) dev-libs/libyaml virtual/libffi sys-libs/zlib >=app-admin/eselect-ruby-20100402 !<dev-ruby/rdoc-3.9.4 !<dev-ruby/rubygems-1.8.10-r1 !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
+DESCRIPTION=An object-oriented scripting language
+EAPI=5
+HOMEPAGE=http://www.ruby-lang.org/
+IUSE=berkdb debug doc examples gdbm ipv6 +rdoc rubytests socks5 ssl xemacs ncurses +readline
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd
+LICENSE=|| ( Ruby-BSD BSD-2 )
+PDEPEND=>=dev-ruby/rubygems-2.0.14[ruby_targets_ruby21] >=dev-ruby/json-1.8.1[ruby_targets_ruby21] >=dev-ruby/rake-0.9.6[ruby_targets_ruby21] rdoc? ( >=dev-ruby/rdoc-4.0.1[ruby_targets_ruby21] ) xemacs? ( app-xemacs/ruby-modes )
+RDEPEND=berkdb? ( sys-libs/db ) gdbm? ( sys-libs/gdbm ) ssl? ( dev-libs/openssl ) socks5? ( >=net-proxy/dante-1.1.13 ) ncurses? ( sys-libs/ncurses ) readline? ( sys-libs/readline ) dev-libs/libyaml virtual/libffi sys-libs/zlib >=app-admin/eselect-ruby-20100402 !<dev-ruby/rdoc-3.9.4 !<dev-ruby/rubygems-1.8.10-r1
+SLOT=2.1
+SRC_URI=mirror://ruby/2.1/ruby-2.1.1.tar.bz2 http://dev.gentoo.org/~flameeyes/ruby-team/ruby-patches-2.1.1.tar.bz2
+_eclasses_=autotools	5256b4f4c1798109f39f308f9f7eaf5f	eutils	40081e8c7e7f7c4f9db349a1d6d52925	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
+_md5_=5518b5ddd647b51723f7ef86c42b680d
